# gpt-2

./: README.md  pyproject.toml
gpt2/: attention.py  block.py  exceptions.py  model.py
scripts/: train.py
tests/: conftest.py  test_attention.py  test_block.py  test_gpt2.py  test_model.py
